--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "config": "^3.1.0",
     "cross-env": "^5.2.0",
     "pg": "^7.10.0",
