--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "config": "^3.1.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
