--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.9.1",
     "config": "^3.1.0",
     "cross-env": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
@@ -45,6 +46,7 @@
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "jest": "^23.6.0",
