--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^15.0.0",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
@@ -33,6 +34,7 @@
     "class-validator": "^0.9.1",
     "config": "^3.1.0",
     "cross-env": "^5.2.0",
+    "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.12",
@@ -46,6 +48,7 @@
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
