--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
+    "@types/hapi__joi": "^15.0.0",
     "@types/jest": "^23.3.13",
-    "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
