--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.9.1",
     "config": "^3.1.0",
     "cross-env": "^5.2.0",
+    "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
@@ -55,6 +56,7 @@
     "@types/express": "^4.16.0",
     "@types/hapi__joi": "^15.0.0",
     "@types/jest": "^23.3.13",
+    "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
